Fixed white space

--- a/themes/lovesea/sass/_about.scss
+++ b/themes/lovesea/sass/_about.scss
@@ -222,6 +222,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 1.5rem;
+    margin-top: 0;
   }
 }
 
