--- a/themes/lovesea/style.css
+++ b/themes/lovesea/style.css
@@ -1820,7 +1820,8 @@ li.active {
       -webkit-box-align: center;
           -ms-flex-align: center;
               align-items: center;
-      margin-bottom: 1.5rem; } }
+      margin-bottom: 1.5rem;
+      margin-top: 0; } }
 
 @media (min-width: 800px) {
   .block-two-wrapper:first-of-type {
